--- a/examples/custom_resource.yml
+++ b/examples/custom_resource.yml
@@ -7,7 +7,7 @@ Resources:
 - Name: VpnUser
   Kind: Kind
   Version: v0.1
-  Data:
+  Spec:
     Url: vpn.nanocl.internal
     Schema:
       title: VpnUser
