--- a/examples/deploy_secrets.yml
+++ b/examples/deploy_secrets.yml
@@ -13,26 +13,26 @@ Secrets:
 # See all options:
 # https://docs.next-hat.com/references/nanocl/resource
 Resources:
-  - Name: deploy-secret.com
-    Kind: ProxyRule
-    Version: v0.8
-    Data:
-      Rules:
-        - Domain: deploy-secret.com
-          Network: All
-          Locations:
-            - Path: /
-              Target:
-                Key: deploy-secret.global.c
-                Port: 9000
+- Name: deploy-secret.com
+  Kind: ProxyRule
+  Version: v0.8
+  Spec:
+    Rules:
+    - Domain: deploy-secret.com
+      Network: All
+      Locations:
+      - Path: /
+        Target:
+          Key: deploy-secret.global.c
+          Port: 9000
 
 # See all options:
 # https://docs.next-hat.com/references/nanocl/cargo
 Cargoes:
   - Name: deploy-secret
     Secrets:
-      - deploy-secret
+    - deploy-secret
     Container:
       Image: ghcr.io/nxthat/nanocl-get-started:latest
       Env:
-        - APP=GET_STARTED
+      - APP=GET_STARTED
