--- a/examples/vm_example.yml
+++ b/examples/vm_example.yml
@@ -9,7 +9,7 @@ Resources:
   - Name: vm-test
     Kind: ProxyRule
     Version: v0.8
-    Data:
+    Spec:
       Watch:
         - vm-test.global.v
       Rules:
