--- a/examples/deploy_example.yml
+++ b/examples/deploy_example.yml
@@ -25,7 +25,7 @@ Resources:
     Data:
       Rules:
         - Domain: deploy-example.com
-          Network: Public
+          Network: Internal
           Locations:
             - Path: /
               Target:
