refactor/nanocld: with http result

--- a/bin/ncproxy/tests/resource_http.yml
+++ b/bin/ncproxy/tests/resource_http.yml
@@ -10,7 +10,7 @@ Resources:
         - get-started.global.c
       Rules:
         - Domain: get-started.com
-          Network: Public
+          Network: Internal
           Locations:
             - Path: /
               Target:
