--- a/examples/deploy_args_example.yml
+++ b/examples/deploy_args_example.yml
@@ -16,7 +16,7 @@ Resources:
     Data:
       Rules:
         - Domain: ${{ Args.domain }}
-          Network: Public
+          Network: Internal
           Locations:
             - Path: /
               Target:
