--- a/examples/metadata.yml
+++ b/examples/metadata.yml
@@ -14,7 +14,7 @@ Resources:
     Data:
       Rules:
         - Domain: deploy-example.com
-          Network: Public
+          Network: Internal
           Locations:
             - Path: /
               Target:
