--- a/bin/ncproxy/Cargo.toml
+++ b/bin/ncproxy/Cargo.toml
@@ -47,7 +47,12 @@ notify = { version = "6.1.1", default-features = false, features = [
   "macos_kqueue",
 ] }
 nanocld_client = { version = "0.11.0", features = ["tokio"] }
-nanocl_error = { version = "0.1.0", features = ["io", "http", "http_client"] }
+nanocl_error = { version = "0.1.0", features = [
+  "io",
+  "http",
+  "http_client",
+  "serde_json",
+] }
 nanocl_utils = { version = "0.3.0", features = [
   "ntex",
   "logger",
