--- a/bin/ncvpnkit/Cargo.toml
+++ b/bin/ncvpnkit/Cargo.toml
@@ -20,3 +20,8 @@ vpnkitrc = { version = "0.1.2", features = ["tokio"] }
 nanocld_client = { version = "0.11.0" }
 nanocl_utils = { version = "0.3.0", features = ["logger"] }
 serde_json = "1.0.108"
+nanocl_error = { version = "0.1.0", features = [
+  "io",
+  "http_client",
+  "serde_json",
+] }
