--- a/examples/deploy_example.yml
+++ b/examples/deploy_example.yml
@@ -25,7 +25,7 @@ Resources:
     Data:
       Rules:
         - Domain: deploy-example.com
-          Network: Internal
+          Network: All
           Locations:
             - Path: /
               Target:
@@ -49,9 +49,6 @@ Cargoes:
         App: deploy-example
     Secrets:
       - env.deploy-example.com
-    InitContainer:
-      Image: alpine:latest
-      Cmd: ["sleep", "1"]
     Container:
       Image: ghcr.io/nxthat/nanocl-get-started:latest
       Env:
