--- a/bin/ncproxy/tests/resource_http_internal.yml
+++ b/bin/ncproxy/tests/resource_http_internal.yml
@@ -5,9 +5,7 @@ Resources:
   - Name: proxy-get-started
     Kind: ProxyRule
     Version: v0.8
-    Config:
-      Watch:
-        - get-started.global.c
+    Data:
       Rules:
         - Domain: get-started.com
           Network: Private
