--- a/crates/nanocl_error/Cargo.toml
+++ b/crates/nanocl_error/Cargo.toml
@@ -22,6 +22,7 @@ bollard = ["dep:bollard-next"]
 serde_json = ["dep:serde_json"]
 serde_yaml = ["dep:serde_yaml"]
 serde_urlencoded = ["dep:serde_urlencoded"]
+tokio = ["dep:tokio"]
 
 [dependencies]
 ntex = { version = "0.7.12", optional = true }
@@ -30,3 +31,4 @@ serde_urlencoded = { version = "0.7.1", optional = true }
 diesel = { version = "2.1.2", default-features = false, optional = true }
 bollard-next = { version = "0.15.4", optional = true }
 serde_yaml = { version = "0.9", optional = true }
+tokio = { version = "1.34.0", default-features = false, optional = true }
