--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -47,7 +47,7 @@ jobs:
       # Setup daemon for the tests
       - name: Setup
         run: |
-          sudo sh -c "echo '\n127.0.0.1 nstore.nanocl.internal\n127.0.0.1 ndaemon.nanocl.internal' >> /etc/hosts"
+          sudo sh -c "echo '\n127.0.0.1 store.nanocl.internal\n127.0.0.1 nanocl.internal' >> /etc/hosts"
           docker pull cockroachdb/cockroach:v23.1.12
           docker pull ghcr.io/nxthat/metrsd:0.3.2
           docker pull ghcr.io/nxthat/nanocl-get-started:latest
