--- a/installer.yml
+++ b/installer.yml
@@ -12,7 +12,7 @@ Cargoes:
     Container:
       Image: cockroachdb/cockroach:v23.1.12
       Tty: true
-      Hostname: nstore.nanocl.internal
+      Hostname: store.nanocl.internal
       Env:
         - TZ=Europe/Paris
       Cmd:
@@ -149,7 +149,7 @@ Cargoes:
       Image: ghcr.io/nxthat/nanocld:0.11.0
       # {% endif %}
       Tty: true
-      Hostname: ndaemon.nanocl.internal
+      Hostname: nanocl.internal
       Cmd:
         - --state-dir
         - ${{ state_dir }}
