--- a/tests/docker-compose.yaml
+++ b/tests/docker-compose.yaml
@@ -31,7 +31,7 @@ services:
         if [[ ! -f "/ca/ca.key" ]]; then
           echo "generating certs"
           cockroach cert create-ca --certs-dir=/certs --ca-key=/ca/ca.key
-          cockroach cert create-node 127.0.0.1 nstore.nanocl.internal --certs-dir=/certs --ca-key=/ca/ca.key
+          cockroach cert create-node 127.0.0.1 store.nanocl.internal --certs-dir=/certs --ca-key=/ca/ca.key
           cockroach cert create-client root --certs-dir=/certs --ca-key=/ca/ca.key
         fi
         cockroach start-single-node --certs-dir=/certs --listen-addr=:26257 --sql-addr=:26258
