--- a/bin/nanocld/Cargo.toml
+++ b/bin/nanocld/Cargo.toml
@@ -6,7 +6,7 @@ authors = ["nanocl contributors <team@next-hat.com>"]
 description = "The Self-Sufficient Hybrid-Cloud Orchestrator Daemon"
 readme = "../../readme.md"
 license = "MIT OR Apache-2.0"
-homepage = "https://docs.next-hat.com/docs/guides/nanocl/overview"
+homepage = "https://next-hat.com/nanocl"
 repository = "https://github.com/nxthat/nanocld"
 
 [[bin]]
@@ -31,13 +31,13 @@ release = []
 [build-dependencies]
 clap = { version = "4.4.11", features = ["derive"] }
 clap_mangen = { version = "0.2" }
-nanocl_utils = { version = "0.3.0", features = ["build_tools"] }
+nanocl_utils = { version = "0.3.1", features = ["build_tools"] }
 
 [dev-dependencies]
 serde_yaml = "0.9"
 
 [dependencies]
-nanocl_error = { version = "0.1.0", features = [
+nanocl_error = { version = "0.1.1", features = [
   "io",
   "http",
   "http_client",
@@ -77,11 +77,11 @@ chrono = { version = "0.4.31", default-features = false, features = [
   "serde",
 ] }
 jsonschema = { version = "0.17.0", default-features = false }
-nanocld_client = { version = "0.11.0", features = ["tokio"] }
+nanocld_client = { version = "0.12.0", features = ["tokio"] }
 openssl = { version = "0.10.56", features = ["vendored"] }
 metrsd_client = "0.3.0"
-nanocl_stubs = { version = "0.11.0", features = ["serde"] }
-nanocl_utils = { version = "0.3.0", features = ["unix", "ntex", "logger"] }
+nanocl_stubs = { version = "0.12.0", features = ["serde"] }
+nanocl_utils = { version = "0.3.1", features = ["unix", "ntex", "logger"] }
 utoipa = { version = "4.1", features = ["yaml"], optional = true }
 notify = "6.1.1"
 ntex-cors = "0.4.0"
