--- a/crates/nanocl_utils/Cargo.toml
+++ b/crates/nanocl_utils/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "nanocl_utils"
-version = "0.3.0"
+version = "0.3.1"
 edition = "2021"
 authors = ["nanocl contributors <team@next-hat.com>"]
 description = "Nanocl shared utils"
 readme = "readme.md"
 license = "MIT OR Apache-2.0"
-homepage = "https://docs.next-hat.com/docs/guides/nanocl/overview"
+homepage = "https://next-hat.com/nanocl"
 repository = "https://github.com/nxthat/nanocl"
 
 [lib]
@@ -40,4 +40,4 @@ utoipa-swagger-ui = { version = "5.0", optional = true }
 libc = { version = "0.2.139", optional = true }
 clap = { version = "4.4.11", features = ["derive", "cargo"], optional = true }
 clap_mangen = { version = "0.2", optional = true }
-nanocl_error = { version = "0.1.0", optional = true }
+nanocl_error = { version = "0.1.1", optional = true }
