--- a/crates/nanocld_client/Cargo.toml
+++ b/crates/nanocld_client/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "nanocld_client"
-version = "0.11.0"
+version = "0.12.0"
 edition = "2021"
 authors = ["nanocl contributors <team@next-hat.com>"]
 description = "The Nanocl daemon api client"
 readme = "readme.md"
 license = "MIT OR Apache-2.0"
-homepage = "https://docs.next-hat.com/docs/guides/nanocl"
+homepage = "https://next-hat.com/nanocl"
 repository = "https://github.com/nxthat/nanocl"
 
 [lib]
@@ -30,5 +30,5 @@ ntex = { version = "0.7.12", features = ["openssl"] }
 serde = { version = "1.0.192", features = ["derive"] }
 bollard-next = { version = "0.15.4" }
 openssl = { version = "0.10.56", features = ["vendored"] }
-nanocl_stubs = { version = "0.11.0", features = ["serde"] }
-nanocl_error = { version = "0.1.0", features = ["io", "http_client"] }
+nanocl_stubs = { version = "0.12.0", features = ["serde"] }
+nanocl_error = { version = "0.1.1", features = ["io", "http_client"] }
