--- a/installer.yml
+++ b/installer.yml
@@ -13,13 +13,20 @@ Cargoes:
       Image: cockroachdb/cockroach:v23.1.12
       Tty: true
       Hostname: store.nanocl.internal
+      Entrypoint:
+      - /bin/sh
       Env:
         - TZ=Europe/Paris
       Cmd:
-        - start-single-node
-        - --insecure
-        - --listen-addr=:26257
-        - --sql-addr=:26258
+        - -c
+        - |
+          if [[ ! -f "/ca/ca.key" ]]; then
+            echo "generating certs"
+            cockroach cert create-ca --certs-dir=/certs --ca-key=/ca/ca.key
+            cockroach cert create-node 127.0.0.1 store.nanocl.internal --certs-dir=/certs --ca-key=/ca/ca.key
+            cockroach cert create-client root --certs-dir=/certs --ca-key=/ca/ca.key
+          fi
+          cockroach start-single-node --certs-dir=/certs --listen-addr=:26257 --sql-addr=:26258
       HostConfig:
         NetworkMode: system
         Binds:
@@ -48,7 +55,7 @@ Cargoes:
   - Name: nproxy
     Container:
       # {% if channel == "nightly" %}
-      Image: ghcr.io/nxthat/nproxy:1.25.0.2-nightly
+      Image: ghcr.io/nxthat/nproxy:1.25.0.3-nightly
       # {% else %}
       Image: ghcr.io/nxthat/nproxy:1.25.0.2
       # {% endif %}
@@ -77,7 +84,7 @@ Cargoes:
   - Name: ncproxy
     Container:
       # {% if channel == "nightly" %}
-      Image: ghcr.io/nxthat/ncproxy:0.8.0-nightly
+      Image: ghcr.io/nxthat/ncproxy:0.9.0-nightly
       # {% else %}
       Image: ghcr.io/nxthat/ncproxy:0.8.0
       # {% endif %}
@@ -105,7 +112,7 @@ Cargoes:
       Env:
         - TZ=Europe/Paris
       # {% if channel == "nightly" %}
-      Image: ghcr.io/nxthat/ndns:2.89.0.2-nightly
+      Image: ghcr.io/nxthat/ndns:2.89.0.3-nightly
       # {% else %}
       Image: ghcr.io/nxthat/ndns:2.89.0.2
       # {% endif %}
@@ -119,7 +126,7 @@ Cargoes:
       Env:
         - TZ=Europe/Paris
       # {% if channel == "nightly" %}
-      Image: ghcr.io/nxthat/ncdns:0.3.2-nightly
+      Image: ghcr.io/nxthat/ncdns:0.4.0-nightly
       # {% else %}
       Image: ghcr.io/nxthat/ncdns:0.3.2
       # {% endif %}
@@ -144,7 +151,7 @@ Cargoes:
   - Name: ndaemon
     Container:
       # {% if channel == "nightly" %}
-      Image: ghcr.io/nxthat/nanocld:0.11.0-nightly
+      Image: ghcr.io/nxthat/nanocld:0.12.0-nightly
       # {% else %}
       Image: ghcr.io/nxthat/nanocld:0.11.0
       # {% endif %}
