--- a/crates/nanocld_client/Cargo.toml
+++ b/crates/nanocld_client/Cargo.toml
@@ -26,9 +26,8 @@ tokio = { version = "1.34.0", features = ["fs"] }
 [dependencies]
 futures = "0.3.25"
 serde_json = "1.0.108"
-ntex = { version = "0.7.12", features = ["openssl"] }
+ntex = { version = "0.7.12", features = ["rustls"] }
 serde = { version = "1.0.192", features = ["derive"] }
 bollard-next = { version = "0.15.4" }
-openssl = { version = "0.10.56", features = ["vendored"] }
 nanocl_stubs = { version = "0.12.0", features = ["serde"] }
 nanocl_error = { version = "0.1.1", features = ["io", "http_client"] }
