--- a/crates/nanocld_client/Cargo.toml
+++ b/crates/nanocld_client/Cargo.toml
@@ -26,7 +26,7 @@ tokio = { version = "1.34.0", features = ["fs"] }
 [dependencies]
 futures = "0.3.25"
 serde_json = "1.0.108"
-ntex = { version = "0.7.16", features = ["rustls"] }
+ntex = { version = "0.7.16", features = ["openssl"] }
 serde = { version = "1.0.192", features = ["derive"] }
 bollard-next = { version = "0.15.4" }
 nanocl_stubs = { version = "0.12.0", features = ["serde"] }
