--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -40,12 +40,8 @@ jobs:
       - uses: taiki-e/install-action@cargo-llvm-cov
       # Install nextest
       - uses: taiki-e/install-action@nextest
-      # Prepare CI
+      # Prepare CI with images containers and permissions
       - name: Prepare CI
-        run: |
-          sudo ./scripts/prepare_tests.sh
-      # Setup daemon for the tests
-      - name: Setup
         run: |
           sudo sh -c "echo '\n127.0.0.1 store.nanocl.internal\n127.0.0.1 nanocl.internal' >> /etc/hosts"
           docker pull cockroachdb/cockroach:v23.1.12
@@ -59,11 +55,9 @@ jobs:
           docker compose -f ./tests/docker-compose.yaml up -d
           sleep 4
           sudo chown $USER:$USER -R ~/.nanocl_dev
-          cargo run --no-default-features --features test --bin nanocld -- --hosts tcp://0.0.0.0:8585 --state-dir ~/.nanocl_dev/state &
+          cargo run --no-default-features --features test --bin nanocld -- --hosts tcp://0.0.0.0:8585 --state-dir /home/$USER/.nanocl_dev/state &
           sleep 8
-          sudo chmod 777 -R /run/nanocl
-          sudo chmod 777 -R /var/lib/nanocl
-          cargo run --no-default-features --features test --bin ncproxy -- --conf-dir ~/.nanocl_dev/state/proxy &
+          cargo run --no-default-features --features test --bin ncproxy -- --conf-dir /home/$USER/.nanocl_dev/state/proxy &
           sleep 8
           sudo chmod 777 -R ~/.nanocl_dev/state
           sudo chmod 777 -R /run/nanocl
