--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -56,15 +56,15 @@ jobs:
           docker compose -f ./tests/docker-compose.yaml up -d
           sleep 4
           sudo chmod 777 -R /run/nanocl
-          sudo chown $USER:$USER -R ~/.nanocl_dev
+          sudo chmod 777 -R /home/$USER/.nanocl_dev
           cargo run --no-default-features --features test --bin nanocld -- --hosts tcp://0.0.0.0:8585 --state-dir /home/$USER/.nanocl_dev/state &
           sleep 8
           sudo chmod 777 -R /run/nanocl
           cargo run --no-default-features --features test --bin ncproxy -- --conf-dir /home/$USER/.nanocl_dev/state/proxy &
           sleep 8
           sudo chmod 777 -R /run/nanocl
-          sudo chmod 777 -R /home/$USER/.nanocl_dev/state
-          mkdir -p /tmp/nginx/sites-enabled
+          sudo chmod 777 -R /home/$USER/.nanocl_dev
+          mkdir -p /home/$USER/.nanocl_dev/state/proxy/sites-enabled
           cp ./target/debug/nanocl /usr/local/bin
           docker ps -a
       # Run coverage
