--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -44,13 +44,13 @@ jobs:
       - name: Prepare CI
         run: |
           sudo apt-get install cron -y
-          groupadd nanocl
-          usermod -aG nanocl "$USER"
-          mkdir -p /run/nanocl
-          chmod 777 -R /run/nanocl
-          mkdir -p /home/$USER/.nanocl_dev/state/vms/images
-          mkdir -p /home/$USER/.nanocl_dev/state/proxy/nginx/sites-enabled
-          chmod 777 -R /home/$USER/.nanocl_dev/state
+          sudo groupadd nanocl
+          sudo usermod -aG nanocl "$USER"
+          sudo mkdir -p /run/nanocl
+          sudo chmod 777 -R /run/nanocl
+          sudo mkdir -p /home/$USER/.nanocl_dev/state/vms/images
+          sudo mkdir -p /home/$USER/.nanocl_dev/state/proxy/nginx/sites-enabled
+          sudo chmod 777 -R /home/$USER/.nanocl_dev/state
           sudo sh -c "echo '\n127.0.0.1 store.nanocl.internal\n127.0.0.1 nanocl.internal' >> /etc/hosts"
           docker pull cockroachdb/cockroach:v23.1.12
           docker pull ghcr.io/nxthat/metrsd:0.3.2
@@ -66,6 +66,7 @@ jobs:
           sudo chmod 777 -R /home/$USER/.nanocl_dev
           GID=$(id -g)
           echo $GID
+          ls -la /home/$USER/.nanocl_dev/state
           cargo run --no-default-features --features test --bin nanocld -- --hosts tcp://0.0.0.0:8585 --gid $GID --state-dir /home/$USER/.nanocl_dev/state &
           sleep 10
           cargo run --no-default-features --features test --bin ncproxy -- --conf-dir /home/$USER/.nanocl_dev/state/proxy &
